Can delete user by Id (200/404)
