# express-project/docs/swagger.json
@@ -546,13 +546,13 @@
                                 "examples": {
                                     "Example of error": {
                                         "value": {
-                                            "error": "Failed to deletee user by Id"
+                                            "error": "User not found, failed to deletee user by Id"
                                         }
                                     }
                                 }
                             }
                         },
-                        "description": "User not deleted"
+                        "description": "User not found, failed to delete"
                     }
                 },
                 "summary": "Delete user by Id"
@@ -617,345 +617,4 @@
             }
         }
     }
-=======
-  "openapi": "3.0.1",
-  "info": {
-      "title": "CadianArchive",
-      "version": "1.0"
-  },
-  "paths": {
-      "/posts": {
-          "get": {
-              "tags": [
-                  "Posts"
-              ],
-              "parameters": [
-                  {
-                      "examples": {
-                          "Search with multiple tags and exclusions": {
-                              "value": "tag1 tag2 tag3:search !excluded_tag"
-                          }
-                      },
-                      "name": "search",
-                      "description": "Post search",
-                      "schema": {
-                          "type": "string"
-                      },
-                      "in": "query",
-                      "required": true
-                  }
-              ],
-              "responses": {
-                  "200": {
-                      "content": {
-                          "text/plain": {
-                              "schema": {
-                                  "type": "array",
-                                  "items": {
-                                      "$ref": "#/components/schemas/Post"
-                                  }
-                              }
-                          },
-                          "application/json": {
-                              "schema": {
-                                  "type": "array",
-                                  "items": {
-                                      "$ref": "#/components/schemas/Post"
-                                  }
-                              }
-                          },
-                          "text/json": {
-                              "schema": {
-                                  "type": "array",
-                                  "items": {
-                                      "$ref": "#/components/schemas/Post"
-                                  }
-                              }
-                          }
-                      },
-                      "description": "Success"
-                  }
-              },
-              "summary": "Query Posts"
-          },
-          "post": {
-              "requestBody": {
-                  "description": "Post Data",
-                  "content": {
-                      "application/json": {
-                          "schema": {
-                              "$ref": "#/components/schemas/Post"
-                          }
-                      },
-                      "text/json": {
-                          "schema": {
-                              "$ref": "#/components/schemas/Post"
-                          }
-                      },
-                      "application/*+json": {
-                          "schema": {
-                              "$ref": "#/components/schemas/Post"
-                          }
-                      }
-                  }
-              },
-              "tags": [
-                  "Posts"
-              ],
-              "responses": {
-                  "201": {
-                      "content": {
-                          "text/plain": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/Post"
-                              }
-                          },
-                          "application/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/Post"
-                              }
-                          },
-                          "text/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/Post"
-                              }
-                          }
-                      },
-                      "description": "Created"
-                  },
-                  "400": {
-                      "content": {
-                          "text/plain": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          },
-                          "application/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          },
-                          "text/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          }
-                      },
-                      "description": "Bad Request"
-                  }
-              },
-              "summary": "Create a new post"
-          }
-      },
-      "/posts/{id}": {
-          "get": {
-              "tags": [
-                  "Posts"
-              ],
-              "parameters": [
-                  {
-                      "name": "id",
-                      "description": "Post ID",
-                      "schema": {
-                          "format": "uuid",
-                          "type": "string"
-                      },
-                      "in": "path",
-                      "required": true
-                  }
-              ],
-              "responses": {
-                  "200": {
-                      "content": {
-                          "text/plain": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/Post"
-                              }
-                          },
-                          "application/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/Post"
-                              }
-                          },
-                          "text/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/Post"
-                              }
-                          }
-                      },
-                      "description": "Success"
-                  },
-                  "404": {
-                      "content": {
-                          "text/plain": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          },
-                          "application/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          },
-                          "text/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          }
-                      },
-                      "description": "Not Found"
-                  }
-              },
-              "summary": "Get a post by its UUID"
-          },
-          "put": {
-              "requestBody": {
-                  "description": "New Post data",
-                  "content": {
-                      "application/json": {
-                          "schema": {
-                              "$ref": "#/components/schemas/Post"
-                          }
-                      },
-                      "text/json": {
-                          "schema": {
-                              "$ref": "#/components/schemas/Post"
-                          }
-                      },
-                      "application/*+json": {
-                          "schema": {
-                              "$ref": "#/components/schemas/Post"
-                          }
-                      }
-                  }
-              },
-              "tags": [
-                  "Posts"
-              ],
-              "parameters": [
-                  {
-                      "name": "id",
-                      "description": "UUID of the post to update",
-                      "schema": {
-                          "format": "uuid",
-                          "type": "string"
-                      },
-                      "in": "path",
-                      "required": true
-                  }
-              ],
-              "responses": {
-                  "200": {
-                      "description": "Success"
-                  }
-              },
-              "summary": "Update a post"
-          },
-          "delete": {
-              "tags": [
-                  "Posts"
-              ],
-              "parameters": [
-                  {
-                      "name": "id",
-                      "description": "UUID of the post to delete.",
-                      "schema": {
-                          "format": "uuid",
-                          "type": "string"
-                      },
-                      "in": "path",
-                      "required": true
-                  }
-              ],
-              "responses": {
-                  "202": {
-                      "description": "Accepted"
-                  },
-                  "404": {
-                      "content": {
-                          "text/plain": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          },
-                          "application/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          },
-                          "text/json": {
-                              "schema": {
-                                  "$ref": "#/components/schemas/ErrorResult"
-                              }
-                          }
-                      },
-                      "description": "Not Found"
-                  }
-              },
-              "summary": "Deletes a post by it's UUID"
-          }
-      },
-      "/users": {
-          "post": {
-              "requestBody": {
-                  "content": {
-                      "application/json": {}
-                  }
-              },
-              "tags": [
-                  "Users"
-              ],
-              "responses": {
-                  "201": {
-                      "content": {
-                          "application/json": {}
-                      },
-                      "description": "Account created"
-                  },
-                  "400": {
-                      "content": {
-                          "application/json": {}
-                      },
-                      "description": "Failed to create account"
-                  }
-              },
-              "operationId": "Create user",
-              "summary": "Create new user"
-          }
-      },
-      "/users{id}": {}
-  },
-  "components": {
-      "schemas": {
-          "Post": {
-              "type": "object",
-              "properties": {
-                  "id": {
-                      "format": "uuid",
-                      "type": "string"
-                  },
-                  "content": {
-                      "type": "string"
-                  },
-                  "tags": {
-                      "type": "array",
-                      "items": {
-                          "type": "string"
-                      }
-                  }
-              },
-              "additionalProperties": false
-          },
-          "ErrorResult": {
-              "type": "object",
-              "properties": {
-                  "error": {
-                      "nullable": true,
-                      "type": "string"
-                  }
-              },
-              "additionalProperties": false
-          }
-      }
-  }
 }
