# express-project/index.js
@@ -6,6 +6,8 @@ import swaggerDoc from './docs/swagger.json' with {type: "json"}
 import PostsService from "./post-service.js"
 import ImagesService from "./image-service.js"
 import TagService from "./tag-service.js"
+import {UserService} from "./user-service.js"
+import { UsersController } from "./controllers/UsersController.mjs"
 import { registerRoutes } from "./routes.mjs"
 import { PostsController } from "./controllers/PostsController.mjs"
 import { AssetsController } from "./controllers/AssetController.mjs"
@@ -25,11 +27,14 @@ sync()
 const posts = new PostsService()
 const images = new ImagesService()
 const tagService = new TagService()
+const userService = new UserService()
+
 
 const port = process.env.PORT ?? 8080
 const host = process.env.HOST ?? "localhost"
 
 const postsC = new PostsController(posts, tagService, images)
+const usersC = new UsersController(userService)
 const imagesC = new AssetsController(images)
 
 // Set up server
@@ -37,7 +42,7 @@ app.use(cors())
 app.use('/docs', serve, setup(swaggerDoc))
 app.use(json())
 
-registerRoutes(app, postsC, imagesC)
+registerRoutes(app, postsC, imagesC, usersC)
 
 /**
  * Get base URL
@@ -52,96 +57,6 @@ function getBaseUrl(req) {
 
 /**KERDO ABOMINATION **/
 
-/*
-*Post
-*Create account/ return 201 and 400
-*/
-
-const userService = new UserService
-
-app.post("/users", (req,res) => {
-  if (!req.body.username ||!req.body.password || !req.body.email)  {
-    return res.status(400).send({error: "Invalid user data"});  
-  }
-  let user = {
-    id: userService.generateUserId(),
-    username: req.body.username,
-    password: req.body.password,
-    email: req.body.email
-  }
-  users.push(user);
-  res.status(201).send(user);
-})
-  
-/*let users = [];
-
-/*
-*PUT
-*Update user info (200, 400, 401)
-*/
-
-let mock = userService.createUser();
-
-app.put("/users/:id", (req,res) => {
-
-  if (req.params.id == null) {
-    return res.status(400).send({error: "Invalid user ID"});  
-  }
-
-  let id = req.params.id;
-  let existingUser = userService.getUserById(id);
-  if (!existingUser) {
-    return res.status(404).send({error: "Id does not exist"});
-  }
-
-  if (!req.body.username ||!req.body.password || !req.body.email)  {
-    return res.status(400).send({error: "Invalid user data"});
-  }  
-
-    let user = userService.modifyUser(req.params.id, req.body.username, req.body.password)
-    
-    res.status(200).send(user);
-  });
-
-/*
-*GET
-*Get user by ID (200, 404)
-*/
-app.get("/users/:id", (req, res) => {
-  
-  if (req.params.id == null){
-    return
-  }
-
-  let user = userService.getUserById(req.params.id);
-  if (user == null){
-    res.status(404).send({error: `User with this ${req.params.id} doesnt exist`});
-    return
-  }
-  return res.status(200).send(user);
-})
-
-/*
-*DELETE USER BY ID
-*RETURN 200/404
-*/
-/*
-app.delete("/users/:id", async (req, res) => {
-  if (req.params.id == null){
-    return 
-  }
-  
-  let id = req.params.id
-  let user = await userService.getUserById(id);
-  if (user == null){
-    res.status(404).send({error: `User with this ${req.params.id} doesnt exist`});
-    return
-  }
-
-  await users.deleteUser(id)
-  res.status(200).send()
-})
-*/
 
 
 app.listen(port, () => console.log(`URL: http://${host}:${port}/docs`))
